--- a/style.css
+++ b/style.css
@@ -3,13 +3,7 @@ body {
   margin: 0 auto;
   max-width: 600px;
   background: #232323;
-}
-div {
-  height: 200px;
-  background-size: cover;
-  position: relative;
-  margin: 40px 0 0 0;
-  border-radius: 12px;
+  color: #ADAD85;
 }
 h1 {
   font-family: 'Londrina Shadow', cursive;
@@ -21,9 +15,9 @@ h1 {
 h2 {
   text-align: center;
   color: #bbbbbb;
-  margin: 0px 0 50px 0;
+  margin: 5px 0 40px 0;
 }
-p {
+/*p {
   color: rgba(255,255,255,1);
   background: black;
   background: linear-gradient(bottom, rgba(0,0,0,1), rgba(0,0,0,.4));
@@ -40,54 +34,33 @@ p {
   -webkit-transition: height .5s;
   -moz-transition: height .5s;
 }
-
-table, td {
+*/
+table {
+  margin-bottom: 30px;
+}
+td {
   border: 1px #000000 solid;
 }
-thead {
+th {
   font-size: 30px;
   color: #6B6B47;
-}
-
+  padding-bottom: 5px;
+} 
 .table_img {
-  width:200px;
-  height:200px;
+  width:180px;
+  height:180px;
 }
-
-.show-description p {
-  height: 150px;
+.left-side-container {
+  width: 250px;
+  height: 250px;
+  float: left;
+  border-radius: 12px;
+  margin-bottom: 30px;
 }
-
-.show-description small {
-  opacity: 1;
-}
-
-.first {
-  background-image: url("http://dash.ga.co/assets/firstcourse.jpg");
-}
-
-small {
-  opacity: 0;
-}
-
-@media (max-width: 500px) {
-  h1 {
-    font-size: 50px;
-    margin-top: 20px;
-    line-height: 40px;
-  }
-  h2 {
-    font-size: 20px;
-    margin: 20px 0 30px 0;
-  }
-  div {
-    margin: 20px 12px 0 12px;
-  }
-  p {
-    font-size: 20px;
-    line-height: 24px;
-  }
-  small {
-    font-size: 16px;
-  }
+.right-side-container {
+  width: 250px;
+  height: 250px;
+  float: right;
+  border-radius: 12px;
+  margin-bottom: 30px;
 }
